# anonym

./: .gitignore  Makefile  README.md  anonym.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pipeline.yml
test/: tests.sh
test/e2e/: test_e2e.py
test/master/: bad-embed-json.csv  bad-ipv4.csv  bad-ipv6.csv  help.out  no_arguments.out
test/unit/: test_sample.py
